--- a/index.html
+++ b/index.html
@@ -6,88 +6,89 @@
   <title>Bramwell Shopping</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    /* Reset & Base */
+    /* Reset */
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Poppins', sans-serif; background: #f9f9f9; color: #333; line-height: 1.6; }
 
-    /* Navbar */
+    /* Header / Navbar */
     header { background: #111; padding: 15px 0; position: sticky; top: 0; z-index: 1000; }
     .nav-container { width: 90%; margin: auto; display: flex; justify-content: space-between; align-items: center; }
-    .logo { color: #fff; font-size: 1.6rem; font-weight: 700; }
-    .logo span { color: #f1c40f; }
-    nav ul { display: flex; list-style: none; }
-    nav ul li { margin-left: 25px; }
-    nav ul li a { color: #fff; font-weight: 600; transition: 0.3s; text-decoration: none; }
+    .logo { color: #fff; font-weight: 700; font-size: 1.5rem; }
+    nav ul { list-style: none; display: flex; }
+    nav ul li { margin-left: 20px; }
+    nav ul li a { color: #fff; text-decoration: none; font-weight: 500; transition: color 0.3s; }
     nav ul li a:hover { color: #f1c40f; }
 
+    /* Sections */
+    section { min-height: 100vh; display: flex; align-items: center; justify-content: center; flex-direction: column; padding: 60px 20px; }
+    section:nth-child(even) { background: #fff; }
+    section:nth-child(odd) { background: #f4f4f4; }
+
+    h1, h2 { margin-bottom: 20px; }
+    p { max-width: 700px; text-align: center; margin-bottom: 20px; }
+
     /* Hero */
-    .hero { height: 85vh; background: url("file:///C:/Users/iimas/Desktop/f28a40622507328fb3cc9db88479e3d5.png") no-repeat center center/cover; position: relative; display: flex; align-items: center; justify-content: center; }
-    .hero::after { content: ""; position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.6); }
-    .hero-content { position: relative; text-align: center; color: #fff; max-width: 700px; padding: 20px; z-index: 1; }
-    .hero-content h2 { font-size: 3rem; margin-bottom: 15px; font-weight: 700; }
-    .hero-content p { font-size: 1.2rem; margin-bottom: 25px; }
-    .btn { display: inline-block; background: #f1c40f; color: #111; padding: 12px 30px; border-radius: 30px; font-weight: 600; transition: 0.3s; text-decoration: none; }
+    .hero { background: url("https://i.ibb.co/smL1Zzv/shopping-banner.jpg") no-repeat center/cover; color: #fff; text-align: center; }
+    .hero h1 { font-size: 2.5rem; margin-bottom: 10px; }
+    .hero p { font-size: 1.2rem; margin-bottom: 20px; }
+
+    /* Buttons */
+    .btn { background: #f1c40f; color: #111; padding: 12px 25px; border-radius: 6px; text-decoration: none; font-weight: 600; transition: 0.3s; }
     .btn:hover { background: #d4ac0d; color: #fff; }
 
-    /* Sections */
-    .cards { width: 90%; margin: 60px auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; }
-    .card { background: #fff; padding: 30px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-align: center; transition: 0.3s; }
-    .card:hover { transform: translateY(-8px); box-shadow: 0 6px 18px rgba(0,0,0,0.15); }
-    .card h3 { font-size: 1.4rem; margin-bottom: 15px; color: #111; }
-    .card p { font-size: 1rem; margin-bottom: 20px; color: #444; }
-    .btn.small { padding: 8px 18px; font-size: 0.9rem; }
-
     /* Footer */
-    footer { background: #111; color: #bbb; text-align: center; padding: 20px; margin-top: 50px; font-size: 0.9rem; }
+    footer { background: #111; color: #fff; text-align: center; padding: 15px; }
   </style>
 </head>
 <body>
+
   <!-- Navbar -->
   <header>
     <div class="nav-container">
-      <h1 class="logo">Bramwell <span>Shopping</span></h1>
+      <div class="logo">Bramwell Shopping</div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Join</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#join">Join</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <!-- Hero -->
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Welcome to Bramwell Shopping</h2>
-      <p>Luxury Roblox shopping experiences like never before.</p>
-      <a href="#" class="btn">Discover More</a>
-    </div>
+  <!-- Home -->
+  <section id="home" class="hero">
+    <h1>Welcome to Bramwell Shopping</h1>
+    <p>Your premier Roblox shopping experience.</p>
+    <a href="https://www.roblox.com/groups/your-group-id" target="_blank" class="btn">Join Our Roblox Group</a>
   </section>
 
-  <!-- Info Cards -->
-  <main class="cards">
-    <div class="card">
-      <h3>About Us</h3>
-      <p>Discover our premium Roblox shopping mall and vision for the future of virtual commerce.</p>
-      <a href="#" class="btn small">Read More</a>
-    </div>
-    <div class="card">
-      <h3>Join Us</h3>
-      <p>Become part of our Roblox and Discord community for exclusive stores, updates, and events.</p>
-      <a href="#" class="btn small">Join Today</a>
-    </div>
-    <div class="card">
-      <h3>Contact</h3>
-      <p>Want to collaborate or need support? Reach out to us anytime via Roblox or Discord.</p>
-      <a href="#" class="btn small">Get in Touch</a>
-    </div>
-  </main>
+  <!-- About -->
+  <section id="about">
+    <h2>About Us</h2>
+    <p>Bramwell Shopping is your one-stop destination for unique in-game shopping experiences. 
+       We bring the feel of real-world malls into Roblox with exclusive stores, seasonal events, and community fun.</p>
+  </section>
+
+  <!-- Join -->
+  <section id="join">
+    <h2>Join the Community</h2>
+    <p>Become part of the Bramwell Shopping family. Join our Roblox group and Discord to stay updated on events and new releases!</p>
+    <a href="https://www.roblox.com/groups/your-group-id" target="_blank" class="btn">Roblox Group</a>
+    <a href="https://discord.gg/your-discord-invite" target="_blank" class="btn">Discord Server</a>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Have questions or feedback? Reach out to us through our Roblox group or Discord server.</p>
+  </section>
 
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Bramwell Shopping. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
