--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     p { max-width: 700px; text-align: center; margin-bottom: 20px; }
 
     /* Hero */
-    .hero { background: url("https://i.ibb.co/smL1Zzv/shopping-banner.jpg") no-repeat center/cover; color: #fff; text-align: center; }
+    .hero { background: url("file:///C:/Users/iimas/Desktop/f28a40622507328fb3cc9db88479e3d5.png") no-repeat center/cover; color: #fff; text-align: center; }
     .hero h1 { font-size: 2.5rem; margin-bottom: 10px; }
     .hero p { font-size: 1.2rem; margin-bottom: 20px; }
 
