--- a/index.html
+++ b/index.html
@@ -74,7 +74,28 @@
     <main class="cards">
       <div class="card">
         <h3>About Us</h3>
-        <p>Welcome to Bramwell Shopping, your go-to destination for style, convenience, and quality. We believe shopping should be more than just buying products — it should be an experience that inspires and connects people.
+        <p>Discover our premium Roblox shopping mall and vision for the future of virtual commerce.</p>
+        <a class="btn small" onclick="showPage('about')">Read More</a>
+      </div>
+      <div class="card">
+        <h3>Join Us</h3>
+        <p>Become part of our Roblox and Discord community for exclusive stores, updates, and events.</p>
+        <a class="btn small" onclick="showPage('join')">Join Today</a>
+</a>
+      </div>
+      <div class="card">
+        <h3>Contact</h3>
+        <p>>Want to collaborate or need support? Reach out to us anytime via Roblox or Discord.</p>
+        <a class="btn small" onclick="showPage('contact')">Get in Touch</a>
+                <a class="btn small" onclick="showPage('join')">Join Today</a>
+      </div>
+    </main>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="page">
+    <h2>About Us</h2>
+    <p>Welcome to Bramwell Shopping, your go-to destination for style, convenience, and quality. We believe shopping should be more than just buying products — it should be an experience that inspires and connects people.
 
 At Bramwell Shopping, we bring together a carefully selected range of products, from everyday essentials to the latest trends, all in one easy-to-navigate place. Whether you’re here to discover something new, find the perfect gift, or treat yourself, our mission is to make shopping simple, enjoyable, and rewarding.
 
@@ -87,11 +108,13 @@ Community & Connection – Supporting both customers and local sellers.
 Innovation – A modern, seamless shopping experience built for everyone.
 
 Bramwell Shopping isn’t just a store — it’s a community where style, practicality, and affordability meet. We’re here to help you shop smarter, live better, and enjoy every moment in between.</p>
-        <a class="btn small" onclick="showPage('about')">Read More</a>
-      </div>
-      <div class="card">
-        <h3>Join Us</h3>
-        <p>At Bramwell Shopping, we’re more than just a place to shop — we’re a community. By joining us, you’ll be part of something bigger: a growing hub for shoppers, creators, and friends.
+    <a class="btn" onclick="showPage('home')">Back Home</a>
+  </section>
+
+  <!-- Join -->
+  <section id="join" class="page">
+    <h2>Join Us</h2>
+    <p>At Bramwell Shopping, we’re more than just a place to shop — we’re a community. By joining us, you’ll be part of something bigger: a growing hub for shoppers, creators, and friends.
 
 Why Join?
 
@@ -115,18 +138,20 @@ Be Part of the Journey
 
 Bramwell Shopping is only just beginning, and we’d love for you to be part of our story.
 Click below to join us today and experience the future of shopping in Roblox!</p>
-        <a class="btn small" onclick="showPage('join')">Join Today</a>
+    <a class="btn small" onclick="showPage('join')">Join Today</a>
         <a href="https://discord.gg/pKmKepy54g" 
    style="display:inline-block; padding:12px 24px; 
           background-color:#5865F2; color:white; 
           font-family:Arial, sans-serif; font-weight:bold; 
           border-radius:8px; text-decoration:none;">
-  Join our Discord
-</a>
-      </div>
-      <div class="card">
-        <h3>Contact</h3>
-        <p>Have questions, feedback, or need support?
+    <a class="btn" onclick="showPage('home')">Back Home</a>
+
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="page">
+    <h2>Contact Us</h2>
+    <p>Have questions, feedback, or need support?
 We’d love to hear from you!
 
 📩 Ways to reach us:
@@ -134,42 +159,17 @@ We’d love to hear from you!
 Discord Support – The fastest way to get help. Join our Discord server
  and open a ticket.
 
-LiveChat - A quicker way to interact with our support team to get support
-
 Roblox Group Wall – Leave a message on our official Roblox group wall.
 
-Email – For business inquiries, reach us at: tickets@bramwell-shopping.p.tawk.email.
-
+Email – For business inquiries, reach us at: tickets@bramwell-shopping.p.tawk.email
+      
 💡 Our team usually responds within 24–48 hours.</p>
-        <a class="btn small" onclick="showPage('contact')">Get in Touch</a>
-                <a class="btn small" onclick="showPage('join')">Join Today</a>
+            <a class="btn small" onclick="showPage('contact')">Join Today</a>
         <a href="https://discord.gg/pKmKepy54g" 
    style="display:inline-block; padding:12px 24px; 
           background-color:#5865F2; color:white; 
           font-family:Arial, sans-serif; font-weight:bold; 
           border-radius:8px; text-decoration:none;">
-      </div>
-    </main>
-  </section>
-
-  <!-- About -->
-  <section id="about" class="page">
-    <h2>About Us</h2>
-    <p>Discover our premium Roblox shopping mall and vision for the future of virtual commerce.</p>
-    <a class="btn" onclick="showPage('home')">Back Home</a>
-  </section>
-
-  <!-- Join -->
-  <section id="join" class="page">
-    <h2>Join Our Community</h2>
-    <p>Become part of our Roblox and Discord community for exclusive stores, updates, and events.</p>
-    <a class="btn" onclick="showPage('home')">Back Home</a>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact" class="page">
-    <h2>Contact Us</h2>
-    <p>Want to collaborate or need support? Reach out to us anytime via Roblox or Discord.</p>
     <a class="btn" onclick="showPage('home')">Back Home</a>
   </section>
 
